--- a/portfolio/cybertruck/css/main.css
+++ b/portfolio/cybertruck/css/main.css
@@ -138,7 +138,7 @@ textarea:not([rows]) {
 /* USER STYLES */
 header {
 background-color:#000;
-background-image: url("https://nabozhev.github.io/portfolio/cybertruck/images/teslaback.jpgportfolio/cybertruck/images/teslaback.jpg");
+background-image: url("https://nabozhev.github.io/portfolio/cybertruck/images/teslaback.jpg");
 background-position: center;
 background-size: cover;
 font-size: 14px;
